flux/infrastructure/media/sonarr/deployment.yaml
# Auto-split from cluster files
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-192-168-100-11
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        runAsGroup: 1000
        supplementalGroups:
        - 1000
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:4.0.11
        resources:
          limits:
            cpu: '4'
            memory: 4Gi
          requests:
            cpu: 200m
            memory: 512Mi
        ports:
        - containerPort: 8989
          name: http
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media-shows
          mountPath: /data/shows
        - name: media-anime
          mountPath: /data/anime
        - name: media-downloads
          mountPath: /downloads
        securityContext:
          capabilities:
            drop:
            - ALL
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-config
      - name: media-shows
        persistentVolumeClaim:
          claimName: media-shows
      - name: media-anime
        persistentVolumeClaim:
          claimName: media-anime
      - name: media-downloads
        persistentVolumeClaim:
          claimName: media-downloads
