flux/infrastructure/media/sonarr/ingress.yaml
# Auto-split from cluster files
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: identity-sonarr-role-chain@kubernetescrd
spec:
  tls:
  - hosts:
    - sonarr.becklab.cloud
    secretName: sonarr-tls
  rules:
  - host: sonarr.becklab.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989
