flux/infrastructure/media/sonarr/sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-192-168-100-11
      securityContext:
        fsGroup: 1000
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          resources:
            limits:
              cpu: "4"
              memory: 4Gi
            requests:
              cpu: 200m
              memory: 512Mi
          ports:
            - containerPort: 8989
              name: http
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media-shows
              mountPath: /data/shows
            - name: media-anime
              mountPath: /data/anime
            - name: media-downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: media-shows
          persistentVolumeClaim:
            claimName: media-shows
        - name: media-anime
          persistentVolumeClaim:
            claimName: media-anime
        - name: media-downloads
          persistentVolumeClaim:
            claimName: media-downloads
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    app: sonarr
  ports:
    - name: http
      port: 8989
      targetPort: 8989
      protocol: TCP
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.becklab.cloud`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
      middlewares:
        - name: sso-admin-chain
          namespace: identity
  tls:
    secretName: sonarr-tls
